--- a/Exercicios/Ex 19/paginas/home.html
+++ b/Exercicios/Ex 19/paginas/home.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="../pacote-projeto-d010/imagens/favicon.ico" type="image/x-icon">
         <title>Home</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        
+        <h1>Home</h1>
+        <p><a href="../index.html" rel="prev">voltar</a></p>
     </body>
 </html>
