--- a/Exercicios/Ex 19/index.html
+++ b/Exercicios/Ex 19/index.html
@@ -72,5 +72,5 @@
         <p>Site criado por <a href="https://github.com/gustavoguanabara/html-css" targe="_blanck" rel="external">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" targe="_blank" rel="external">CursoemVideo</a></p>
     </footer>
 </body>
-<!-- OBS: pode-se usar o site mackflow.com para ajudar com a criação de layouts. -->
+<!-- OBS: pode-se usar o site mackflow.com para ajudar com a criação de layouts. Pode-se usar também o gerador de qr-code para acessar o site, para isso basta acessar o site qr-code-generator.com, clicar em url, colocar o endereço do site e gerar o qr-code. -->
 </html>
