--- a/Exercicios/Ex 20/fundo01.html
+++ b/Exercicios/Ex 20/fundo01.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste de Imagem de Fundo</title>
     <link rel="shortcut icon" href="favicon-css.ico" type="image/x-icon">
+    <title>Teste de Imagem de Fundo</title>
     <style>
         body{
-            background-image: url('imagens/target001.png');
+            background-image: url('imagens/wallpaper001.jpg');
         }
         div.quadrado{
             display: inline-block;
