--- a/Exercicios/Ex 20/fundo06.html
+++ b/Exercicios/Ex 20/fundo06.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon-css.ico" type="image/x-icon">
-    <title></title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
             height: 100hv;
@@ -13,10 +13,19 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover; /* Temos a opção de usar o auto que é o padrão; podemos usar também o pixel ou %, no caso usariamos 100% 100% para ajustar a largura e altura, respectivamente, mas essa não é uma opçao muito boa; o contain que mostra 100% da imagem, porém com espaços (barras) na vertical ou na horizontal, para ajustar a imagem sem cortes; e o mais ideal, nesse caso, que é o cover (cobrir), que coloca 100% da imagem na tela, mesmo que precise cortar umas partes. */
+            background-attachment: fixed; /* Attachment significa vínculo, no caso temos a opção fixed que fixa o background e rola apenas o conteúdo ou a opção scroll. */
+
+            /* Shorthand - background
+            color > image > position > repeat > [size] > attachment
+            obs: a teoria (w3c e documentação) diz que deve-se usar essa ordem, porém, na pratica, o size ainda não funciona nessa shorthand, logo deve-se omití-lo da shorthand e escrevê-lo da forma convencional abaixo. No caso ficaria:
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
+            */
+
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 600px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +36,10 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint obcaecati blanditiis? Magni praesentium recusandae quae dolorum quibusdam, commodi odio omnis sapiente earum cumque pariatur sint, veniam estas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsam deserunt at itaque. Illo exercitationem animi cumque dicta odit voluptatibus nobis saepe obcaecati, doloremque, in sint esse quos hic pariatur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quas excepturi repellendus consequatur quaerat ratione similique odio illo aliquam necessitatibus! Provident repellendus corrupti quisquam a quod neque cumque, inventore explicabo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint obcaecati blanditiis? Magni praesentium recusandae quae dolorum quibusdam, commodi odio omnis sapiente earum cumque pariatur sint, veniam estas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsam deserunt at itaque. Illo exercitationem animi cumque dicta odit voluptatibus nobis saepe obcaecati, doloremque, in sint esse quos hic pariatur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quas excepturi repellendus consequatur quaerat ratione similique odio illo aliquam necessitatibus! Provident repellendus corrupti quisquam a quod neque cumque, inventore explicabo. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint obcaecati blanditiis? Magni praesentium recusandae quae dolorum quibusdam, commodi odio omnis sapiente earum cumque pariatur sint, veniam estas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsam deserunt at itaque. Illo exercitationem animi cumque dicta odit voluptatibus nobis saepe obcaecati, doloremque, in sint esse quos hic pariatur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quas excepturi repellendus consequatur quaerat ratione similique odio illo aliquam necessitatibus! Provident repellendus corrupti quisquam a quod neque cumque, inventore explicabo. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint obcaecati blanditiis? Magni praesentium recusandae quae dolorum quibusdam, commodi odio omnis sapiente earum cumque pariatur sint, veniam estas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsam deserunt at itaque. Illo exercitationem animi cumque dicta odit voluptatibus nobis saepe obcaecati, doloremque, in sint esse quos hic pariatur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quas excepturi repellendus consequatur quaerat ratione similique odio illo aliquam necessitatibus! Provident repellendus corrupti quisquam a quod neque cumque, inventore explicabo. <br>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt sint obcaecati blanditiis? Magni praesentium recusandae quae dolorum quibusdam, commodi odio omnis sapiente earum cumque pariatur sint, veniam estas. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus ipsam deserunt at itaque. Illo exercitationem animi cumque dicta odit voluptatibus nobis saepe obcaecati, doloremque, in sint esse quos hic pariatur? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo quas excepturi repellendus consequatur quaerat ratione similique odio illo aliquam necessitatibus! Provident repellendus corrupti quisquam a quod neque cumque, inventore explicabo. </p>
     </main>
 </body>
 </html>
