--- a/Exercicios/Ex 20/fundo07.html
+++ b/Exercicios/Ex 20/fundo07.html
@@ -11,7 +11,7 @@
             background-size: 100% 100%;
             position: relative; /* é o padrão, geralmente usamos o position para ajustar a posição com mais flexibilidade do que o margin. */
             height: 96vh;
-            padding 10px;
+            padding: 10px;
             background-color: purple;
         }
         #conteudo{
