--- a/Exercicios/Ex 20/fundo01.html
+++ b/Exercicios/Ex 20/fundo01.html
@@ -7,7 +7,7 @@
     <title>Teste de Imagem de Fundo</title>
     <style>
         body{
-            background-image: url('imagens/wallpaper001.jpg');
+            background-image: url('imagens/wallpaper001.jpg'); /* Coloca uma imagem de fundo */
         }
         div.quadrado{
             display: inline-block;
