--- a/Jogo da velha/jogo-da-velha.html
+++ b/Jogo da velha/jogo-da-velha.html
@@ -57,21 +57,21 @@
     <table>
 
     <tr>
-        <td align = "center" id="celula11" class = "CaseGame" onclick = "joga(this.id);"></td>
-        <td align = "center" id="celula12" class = "CaseGame" onclick = "joga(this.id);"></td>
-        <td align = "center" id="celula13" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula11" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula12" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula13" class = "CaseGame" onclick = "joga(this.id);"></td>
     </tr>
 
     <tr>
-        <td align = "center" id="celula21" class = "CaseGame" onclick = "joga(this.id);"></td>
-        <td align = "center" id="celula22" class = "CaseGame" onclick = "joga(this.id);"></td>
-        <td align = "center" id="celula23" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula21" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula22" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula23" class = "CaseGame" onclick = "joga(this.id);"></td>
     </tr>
 
     <tr>
-        <td align = "center" id="celula31" class = "CaseGame" onclick = "joga(this.id);"></td>
-        <td align = "center" id="celula32" class = "CaseGame" onclick = "joga(this.id);"></td>
-        <td align = "center" id="celula33" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula31" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula32" class = "CaseGame" onclick = "joga(this.id);"></td>
+        <td style="text-align: center" id="celula33" class = "CaseGame" onclick = "joga(this.id);"></td>
     </tr>
 
     </table>
